--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -212,7 +212,7 @@ jobs:
         CONFIG_PACKAGE_luci-app-guest-wifi=y
         CONFIG_PACKAGE_luci-app-mosdns=y
         # CONFIG_PACKAGE_luci-app-easymesh=y
-        # CONFIG_PACKAGE_luci-app-eqos=y
+        CONFIG_PACKAGE_luci-app-eqos=y
         # CONFIG_PACKAGE_luci-app-sqm=y
         CONFIG_PACKAGE_luci-app-turboacc=y
         CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING=y
