--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -87,11 +87,12 @@ jobs:
         #svn export https://github.com/messense/aliyundrive-webdav/trunk/openwrt/luci-app-aliyundrive-webdav
         #svn export https://github.com/vernesong/OpenClash/trunk/luci-app-openclash
         git clone https://github.com/xiaorouji/openwrt-passwall
-        git clone https://github.com/sbwml/luci-app-alist
+        #git clone https://github.com/sbwml/luci-app-alist
         git clone -b luci https://github.com/xiaorouji/openwrt-passwall passwall1 && mv -n passwall1/luci-app-passwall  ./; rm -rf passwall1
         svn export https://github.com/kiddin9/openwrt-packages/trunk/luci-app-diskman
         svn export https://github.com/sirpdboy/sirpdboy-package/trunk/luci-app-adguardhome
         #svn export https://github.com/xiaorouji/openwrt-passwall2/trunk/luci-app-passwall2
+        git clone https://github.com/sirpdboy/luci-app-advanced
 
     - name: FilePatch
       run: |
@@ -221,6 +222,7 @@ jobs:
         CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER=y
         CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY=y
         # CONFIG_PACKAGE_luci-app-wifischedule=y
+        CONFIG_PACKAGE_luci-app-advanced=y
         EOF
 
         # LuCI主题:
@@ -241,8 +243,8 @@ jobs:
 
         # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
         # cat >> .config <<EOF
-        # # CONFIG_TARGET_IMAGES_PAD is not set
-        # # CONFIG_VMDK_IMAGES is not set
+        # CONFIG_TARGET_IMAGES_PAD is not set
+        # CONFIG_VMDK_IMAGES is not set
         # EOF
 
         # 
