--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -79,10 +79,10 @@ jobs:
         mkdir openwrt-packages
         cd openwrt-packages
         git clone https://github.com/tty228/luci-app-serverchan
-        git clone https://github.com/fw876/helloworld
+        #git clone https://github.com/fw876/helloworld
         git clone -b lede https://github.com/pymumu/luci-app-smartdns
         svn export https://github.com/immortalwrt/packages/trunk/net/smartdns
-        git clone https://github.com/gngpp/luci-theme-design
+        #git clone https://github.com/gngpp/luci-theme-design
         #svn export https://github.com/messense/aliyundrive-webdav/trunk/openwrt/aliyundrive-webdav
         #svn export https://github.com/messense/aliyundrive-webdav/trunk/openwrt/luci-app-aliyundrive-webdav
         #svn export https://github.com/vernesong/OpenClash/trunk/luci-app-openclash
@@ -212,7 +212,7 @@ jobs:
         # CONFIG_PACKAGE_luci-app-adguardhome=y
         CONFIG_PACKAGE_luci-app-guest-wifi=y
         CONFIG_PACKAGE_luci-app-mosdns=y
-        # CONFIG_PACKAGE_luci-app-easymesh=y
+        CONFIG_PACKAGE_luci-app-easymesh=y
         CONFIG_PACKAGE_luci-app-eqos=y
         # CONFIG_PACKAGE_luci-app-sqm=y
         CONFIG_PACKAGE_luci-app-turboacc=y
