--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -85,7 +85,7 @@ jobs:
         #git clone https://github.com/gngpp/luci-theme-design
         #svn export https://github.com/messense/aliyundrive-webdav/trunk/openwrt/aliyundrive-webdav
         #svn export https://github.com/messense/aliyundrive-webdav/trunk/openwrt/luci-app-aliyundrive-webdav
-        #svn export https://github.com/vernesong/OpenClash/trunk/luci-app-openclash
+        svn export https://github.com/vernesong/OpenClash/trunk/luci-app-openclash
         git clone https://github.com/xiaorouji/openwrt-passwall
         #git clone https://github.com/sbwml/luci-app-alist
         git clone -b luci https://github.com/xiaorouji/openwrt-passwall passwall1 && mv -n passwall1/luci-app-passwall  ./; rm -rf passwall1
@@ -93,6 +93,8 @@ jobs:
         svn export https://github.com/sirpdboy/sirpdboy-package/trunk/luci-app-adguardhome
         #svn export https://github.com/xiaorouji/openwrt-passwall2/trunk/luci-app-passwall2
         git clone https://github.com/sirpdboy/luci-app-advanced
+        svn export https://github.com/kiddin9/openwrt-packages/trunk/luci-app-iptvhelper
+        svn export https://github.com/kiddin9/openwrt-packages/trunk/iptvhelper
 
     - name: FilePatch
       run: |
@@ -196,7 +198,7 @@ jobs:
         # CONFIG_PACKAGE_luci-app-ssr-plus=y
         # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
         CONFIG_PACKAGE_luci-app-serverchan=y
-        CONFIG_PACKAGE_luci-app-pptp-server=y
+        # CONFIG_PACKAGE_luci-app-pptp-server=y
         CONFIG_PACKAGE_luci-app-smartdns=y
         CONFIG_PACKAGE_luci-app-samba4=y
         CONFIG_PACKAGE_luci-app-ttyd=y
@@ -214,7 +216,7 @@ jobs:
         CONFIG_PACKAGE_luci-app-mosdns=y
         # CONFIG_PACKAGE_luci-app-easymesh=y
         CONFIG_PACKAGE_luci-app-eqos=y
-        # CONFIG_PACKAGE_luci-app-sqm=y
+        CONFIG_PACKAGE_luci-app-sqm=y
         CONFIG_PACKAGE_luci-app-turboacc=y
         CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING=y
         CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
@@ -223,6 +225,8 @@ jobs:
         CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY=y
         CONFIG_PACKAGE_luci-app-wifischedule=y
         CONFIG_PACKAGE_luci-app-advanced=y
+        CONFIG_PACKAGE_luci-app-openclash=y
+        CONFIG_PACKAGE_luci-app-iptvhelper=y
         EOF
 
         # LuCI主题:
