--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -232,6 +232,7 @@ jobs:
         # LuCI主题:
         cat >> .config <<EOF
         CONFIG_PACKAGE_luci-theme-design=y
+        CONFIG_PACKAGE_luci-theme-bootstrap=y
         EOF
 
         # 常用软件包:
@@ -242,7 +243,7 @@ jobs:
         CONFIG_PACKAGE_samba4-server=y
         # CONFIG_PACKAGE_odhcpd is not set
         # CONFIG_luci-app-samba is net set
-        # CONFIG_PACKAGE_luci-app-unblockmusic is net set
+        CONFIG_PACKAGE_luci-app-unblockmusic is net set
         EOF
 
         # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
