--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -96,6 +96,7 @@ jobs:
         git clone https://github.com/sirpdboy/luci-app-advanced
         svn export https://github.com/kiddin9/openwrt-packages/trunk/luci-app-iptvhelper
         svn export https://github.com/kiddin9/openwrt-packages/trunk/iptvhelper
+        svn export https://github.com/kenzok8/openwrt-packages/trunk/luci-app-eqos package/luci-app-eqos
 
     - name: FilePatch
       run: |
