--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -96,7 +96,7 @@ jobs:
         git clone https://github.com/sirpdboy/luci-app-advanced
         svn export https://github.com/kiddin9/openwrt-packages/trunk/luci-app-iptvhelper
         svn export https://github.com/kiddin9/openwrt-packages/trunk/iptvhelper
-        #svn export https://github.com/kenzok8/openwrt-packages/trunk/luci-app-eqos package/luci-app-eqos
+        svn export https://github.com/kenzok8/openwrt-packages/trunk/luci-app-eqos package/luci-app-eqos
 
     - name: FilePatch
       run: |
@@ -217,7 +217,7 @@ jobs:
         CONFIG_PACKAGE_luci-app-guest-wifi=y
         CONFIG_PACKAGE_luci-app-mosdns=y
         # CONFIG_PACKAGE_luci-app-easymesh=y
-        # CONFIG_PACKAGE_luci-app-eqos=y
+        CONFIG_PACKAGE_luci-app-eqos=y
         CONFIG_PACKAGE_luci-app-sqm=y
         CONFIG_PACKAGE_luci-app-turboacc=y
         CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING=y
