--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -100,7 +100,7 @@ jobs:
         svn export https://github.com/kiddin9/openwrt-packages/trunk/iptvhelper
         svn export https://github.com/kenzok8/openwrt-packages/trunk/luci-app-eqos package/luci-app-eqos
         git clone --branch master https://github.com/UnblockNeteaseMusic/luci-app-unblockneteasemusic
-        src-git autotimeset  https://github.com/sirpdboy/luci-app-autotimeset
+        git clone https://github.com/sirpdboy/luci-app-autotimeset
         git clone https://github.com/sirpdboy/luci-app-wizard
 
     - name: FilePatch
