--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -100,8 +100,8 @@ jobs:
         svn export https://github.com/kiddin9/openwrt-packages/trunk/iptvhelper
         svn export https://github.com/kenzok8/openwrt-packages/trunk/luci-app-eqos package/luci-app-eqos
         git clone --branch master https://github.com/UnblockNeteaseMusic/luci-app-unblockneteasemusic
-        # git clone https://github.com/sirpdboy/luci-app-autotimeset
-        # git clone https://github.com/sirpdboy/luci-app-wizard
+        git clone https://github.com/sirpdboy/luci-app-autotimeset
+        git clone https://github.com/sirpdboy/luci-app-wizard
 
     - name: FilePatch
       run: |
@@ -238,8 +238,8 @@ jobs:
         # CONFIG_PACKAGE_luci-theme-argon=y
         # CONFIG_PACKAGE_luci-theme-argon-config=y
         CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
-        # CONFIG_PACKAGE_luci-app-autotimeset=y
-        # CONFIG_PACKAGE_luci-app-wizard=y
+        CONFIG_PACKAGE_luci-app-autotimeset=y
+        CONFIG_PACKAGE_luci-app-wizard=y
         
         EOF
 
@@ -295,7 +295,8 @@ jobs:
         cd openwrt
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
-        echo "::set-output name=status::success"
+        # echo "::set-output name=status::success"
+        echo "status=success" >> $GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
@@ -321,8 +322,10 @@ jobs:
         cd $GITHUB_WORKSPACE/openwrt/bin/targets/*/*
         rm -rf packages
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        echo "::set-output name=status::success"
-        echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
+        # echo "::set-output name=status::success"
+        echo "status=success" >> $GITHUB_OUTPUT
+        # echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
+        echo "release_tag=$(date +"%Y.%m.%d-%H%M")" >> $GITHUB_OUTPUT
 
     - name: Calculate MD5
       run: |
