--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -103,14 +103,14 @@ jobs:
         #git clone https://github.com/sirpdboy/luci-app-autotimeset
         git clone https://github.com/Luupw3d/luci-app-autotimeset
         git clone https://github.com/sirpdboy/luci-app-netwizard
-        svn export https://github.com/kenzok8/small-package/trunk/msd_lite
-        svn export https://github.com/kenzok8/small-package/trunk/luci-app-msd_lite
+        # svn export https://github.com/kenzok8/small-package/trunk/msd_lite
+        # svn export https://github.com/kenzok8/small-package/trunk/luci-app-msd_lite
 
     - name: FilePatch
       run: |
         cp -f patch/rc.local openwrt/package/base-files/files/etc/rc.local
         cd openwrt
-        sed -i "s/OpenWrt /Wing build $(TZ=UTC-8 date "+%Y.%m.%d") @ OpenWrt /g" package/lean/default-settings/files/zzz-default-settings
+        sed -i "s/OpenWrt /Github Action build $(TZ=UTC-8 date "+%Y.%m.%d") @ OpenWrt /g" package/lean/default-settings/files/zzz-default-settings
         sed '6 iuci\ set\ system.@system[0].hostname=G-Dock' -i package/lean/default-settings/files/zzz-default-settings
         sed -i "/firewall\.user/d" package/lean/default-settings/files/zzz-default-settings
         sed -i 's/192.168.1.1/192.168.10.1/g' package/base-files/files/bin/config_generate
@@ -242,6 +242,7 @@ jobs:
         CONFIG_PACKAGE_luci-app-netwizard=y
         CONFIG_PACKAGE_luci-app-passwall2=y
         CONFIG_PACKAGE_luci-app-msd_lite=y
+        CONFIG_PACKAGE_luci-app-udpxy=y 
 
         EOF
 
