--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -81,7 +81,7 @@ jobs:
         git clone https://github.com/tty228/luci-app-serverchan
         #git clone https://github.com/fw876/helloworld
         git clone -b lede https://github.com/pymumu/luci-app-smartdns
-        svn export https://github.com/immortalwrt/packages/trunk/net/smartdns
+        # svn export https://github.com/immortalwrt/packages/trunk/net/smartdns
         git clone https://github.com/gngpp/luci-theme-design
         git clone https://github.com/gngpp/luci-app-design-config
         git clone --depth=1 -b 18.06 https://github.com/jerrykuku/luci-theme-argon
@@ -92,19 +92,27 @@ jobs:
         git clone https://github.com/xiaorouji/openwrt-passwall
         #git clone https://github.com/sbwml/luci-app-alist
         git clone -b luci https://github.com/xiaorouji/openwrt-passwall passwall1 && mv -n passwall1/luci-app-passwall  ./; rm -rf passwall1
-        svn export https://github.com/kiddin9/openwrt-packages/trunk/luci-app-diskman
-        svn export https://github.com/sirpdboy/sirpdboy-package/trunk/luci-app-adguardhome
-        svn export https://github.com/xiaorouji/openwrt-passwall2/trunk/luci-app-passwall2
+        # svn export https://github.com/kiddin9/openwrt-packages/trunk/luci-app-diskman
+        # svn export https://github.com/sirpdboy/sirpdboy-package/trunk/luci-app-adguardhome
+        # svn export https://github.com/xiaorouji/openwrt-passwall2/trunk/luci-app-passwall2
         git clone https://github.com/sirpdboy/luci-app-advanced
-        svn export https://github.com/kiddin9/openwrt-packages/trunk/luci-app-iptvhelper
-        svn export https://github.com/kiddin9/openwrt-packages/trunk/iptvhelper
-        svn export https://github.com/kenzok8/openwrt-packages/trunk/luci-app-eqos package/luci-app-eqos
+        # svn export https://github.com/kiddin9/openwrt-packages/trunk/luci-app-iptvhelper
+        # svn export https://github.com/kiddin9/openwrt-packages/trunk/iptvhelper
+        # svn export https://github.com/kenzok8/openwrt-packages/trunk/luci-app-eqos package/luci-app-eqos
         git clone --branch master https://github.com/UnblockNeteaseMusic/luci-app-unblockneteasemusic
         #git clone https://github.com/sirpdboy/luci-app-autotimeset
         git clone https://github.com/Luupw3d/luci-app-autotimeset
         git clone https://github.com/sirpdboy/luci-app-netwizard
         # svn export https://github.com/kenzok8/small-package/trunk/msd_lite
         # svn export https://github.com/kenzok8/small-package/trunk/luci-app-msd_lite
+
+        #Try to fix feed sources
+        # git clone https://github.com/pymumu/openwrt-smartdns
+        git clone --depth=1 -b lede https://github.com/pymumu/luci-app-smartdns
+        git clone https://github.com/lisaac/luci-app-diskman
+        git clone https://github.com/rufengsuixing/luci-app-adguardhome
+        git clone https://github.com/Huangjoe123/luci-app-eqos
+
 
     - name: FilePatch
       run: |
