--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -88,7 +88,7 @@ jobs:
         git clone --depth=1 -b 18.06 https://github.com/jerrykuku/luci-app-argon-config
         #svn export https://github.com/messense/aliyundrive-webdav/trunk/openwrt/aliyundrive-webdav
         #svn export https://github.com/messense/aliyundrive-webdav/trunk/openwrt/luci-app-aliyundrive-webdav
-        svn export https://github.com/vernesong/OpenClash/trunk/luci-app-openclash
+        # svn export https://github.com/vernesong/OpenClash/trunk/luci-app-openclash
         git clone https://github.com/xiaorouji/openwrt-passwall
         #git clone https://github.com/sbwml/luci-app-alist
         git clone -b luci https://github.com/xiaorouji/openwrt-passwall passwall1 && mv -n passwall1/luci-app-passwall  ./; rm -rf passwall1
@@ -243,13 +243,13 @@ jobs:
         CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY=y
         CONFIG_PACKAGE_luci-app-wifischedule=y
         CONFIG_PACKAGE_luci-app-advanced=y
-        CONFIG_PACKAGE_luci-app-openclash=y
-        CONFIG_PACKAGE_luci-app-iptvhelper=y
+        # CONFIG_PACKAGE_luci-app-openclash=y
+        # CONFIG_PACKAGE_luci-app-iptvhelper=y
         CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
         CONFIG_PACKAGE_luci-app-autotimeset=y
         CONFIG_PACKAGE_luci-app-netwizard=y
-        CONFIG_PACKAGE_luci-app-passwall2=y
-        CONFIG_PACKAGE_luci-app-msd_lite=y
+        # CONFIG_PACKAGE_luci-app-passwall2=y
+        # CONFIG_PACKAGE_luci-app-msd_lite=y
         CONFIG_PACKAGE_luci-app-udpxy=y 
 
         EOF
