--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -80,7 +80,7 @@ jobs:
         cd openwrt-packages
         git clone https://github.com/tty228/luci-app-serverchan
         #git clone https://github.com/fw876/helloworld
-        git clone -b lede https://github.com/pymumu/luci-app-smartdns
+        # git clone -b lede https://github.com/pymumu/luci-app-smartdns
         # svn export https://github.com/immortalwrt/packages/trunk/net/smartdns
         git clone https://github.com/gngpp/luci-theme-design
         git clone https://github.com/gngpp/luci-app-design-config
