--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -130,7 +130,8 @@ jobs:
       run: |
         cd openwrt
         rm -rf feeds/packages/lang/golang
-        svn export https://github.com/sbwml/packages_lang_golang/branches/19.x feeds/packages/lang/golang
+        # svn export https://github.com/sbwml/packages_lang_golang/branches/22.x feeds/packages/lang/golang
+        git clone -b 22.x https://github.com/sbwml/packages_lang_golang feeds/packages/lang/golang
         sed -i 's/[b|B]ootstrap/design/g' ./feeds/luci/collections/luci/Makefile
         cd feeds/luci/applications/luci-app-wrtbwmon
         sed -i 's/ selected=\"selected\"//g' ./luasrc/view/wrtbwmon/wrtbwmon.htm && sed -i 's/\"1\"/\"1\" selected=\"selected\"/g' ./luasrc/view/wrtbwmon/wrtbwmon.htm
