--- a/.github/workflows/Build-R619AC-Lean.yml
+++ b/.github/workflows/Build-R619AC-Lean.yml
@@ -112,6 +112,7 @@ jobs:
         git clone https://github.com/lisaac/luci-app-diskman
         git clone https://github.com/rufengsuixing/luci-app-adguardhome
         git clone https://github.com/Huangjoe123/luci-app-eqos
+        git clone https://github.com/kenzok8/small
 
 
     - name: FilePatch
